# logovista-tools

./: .gitignore  LICENSE  README.md  logovista-tools  pyproject.toml
docs/: README.md  audit-workflow.md  commands.md  corpus-findings.md  hc-renderer-parity.md  legal.md  lvcore-status.md  package-families.md  status.md
spec/: README.md  confidence.md  decoded-model-v0.md  gaiji-media.md  lv-ir-v0.md  lved-main-data.md  menus-titles-indexes.md  multiview-law.md  multiview.md  package-layers.md  ssed-container.md  text-streams.md
src/logovista_tools/: __init__.py  __main__.py  audit.py  capability.py  ccaltstr.py  (+44 more)
src/lvcore-audit/: pyproject.toml
src/lvcore-audit/lvcore_audit/: __init__.py  cli.py  determinism.py  package_validation.py
src/lvcore-experimental/: ARCHITECTURE.md  FUTURE_RUST.md  README.md  REVIEW_CHECKLIST.md  pyproject.toml
src/lvcore-experimental/examples/: debug_inspection.py  friendly_reader.py
src/lvcore-experimental/lvcore/: __init__.py  body_source.py  cli.py  crypto.py  detect.py  diagnostics.py  dictionary.py  document.py  errors.py  gaiji.py  gaiji_resolution.py  index.py  inspect.py  json_types.py  model.py  opcodes.py  package.py  package_entries.py  package_gaiji.py  package_resources.py  package_search.py  package_sidecars.py  package_utils.py  package_validation.py  render.py  resources.py  scan.py  search.py  ssed.py  text.py
tests/: corpus_baseline.README.md  corpus_baseline.json  corpus_baseline_budgeted.README.md  corpus_baseline_budgeted.json  test_audit.py  test_capability.py  test_ccaltstr.py  test_cli_entrypoint.py  test_dereferences.py  test_extract_gaiji.py  test_gaiji_readiness.py  test_hcrender.py  test_loose_media.py  test_lvcore_audit_determinism.py  test_lvcore_experimental.py  test_lvcore_friendly_leaks.py  test_lvcore_parser_units.py  test_lvcore_schema_versions.py  test_lved.py  test_model_spec.py  test_opcode_atlas.py  test_package_models.py  test_panels.py  test_parallel.py  test_resource_taxonomy.py  test_sizk.py  test_spans.py  test_stream.py  test_windows.py  test_writer.py  test_writer_verify.py
