[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lvcore-experimental"
version = "0.0.1"
description = "Experimental clean LogoVista reader core."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41"]
dev = ["pytest>=8"]

[project.scripts]
lvcore = "lvcore.cli:main"

[tool.setuptools.packages.find]
where = ["."]
